// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders a plain string 1`] = `
<DocumentFragment>
  Just a random string
</DocumentFragment>
`;

exports[`Renders a string with HTML in it 1`] = `
<DocumentFragment>
  A string that has 
  <b>
    regular HTML
  </b>
   in it
</DocumentFragment>
`;

exports[`Renders a string with HTML marked with another key 1`] = `
<DocumentFragment>
  A string that uses 
  <b>
    another
  </b>
   placeholder
</DocumentFragment>
`;

exports[`Renders a string with HTML parts in the end 1`] = `
<DocumentFragment>
  A string that is sort of 
  <em>
    italic
  </em>
</DocumentFragment>
`;

exports[`Renders a string with multiple HTML parts in it 1`] = `
<DocumentFragment>
  A string that is sort of 
  <em>
    italic
  </em>
   and 
  <b>
    bold
  </b>
   and such
</DocumentFragment>
`;

exports[`Renders a string with one HTML part 1`] = `
<DocumentFragment>
  A string but with 
  <span>
    hello
  </span>
   in it
</DocumentFragment>
`;

exports[`Renders nothing if the string is not there 1`] = `<DocumentFragment />`;
